# f-free

./: .gitignore  CMakeLists.txt  README.md  anyoption.cpp  benchmark.rb  best.rb  boostgraph.cpp  boostgraph.h  common.cpp  common.h  forbidden.cpp  forbidden.h  gen_graph_info.rb  generate_k.rb  ggraph.cpp  graph.cpp  graph.h  gurobilp.cpp  gurobilp.h  improve_k.rb  install.sh  main.cpp  main_approx2k.cpp  main_benchmark_iso.cpp  main_blp.cpp  main_bottom.cpp  main_bottom_random.cpp  main_extend.cpp  main_grow_reduce.cpp  main_grow_reduce2.cpp  main_grow_reduce3.cpp  main_isomorph.cpp  main_random.cpp  main_random2.cpp  main_random_half.cpp  mergegraph.cpp  mergegraph.h  mgraph.cpp  mgraph.h  randomize.cpp  (+34 more)
config/: albert.json  big.json  bottom.json  bottom_r.json  claw.json  claw_06.json  claw_08.json  claw_random.json  cluster.json  grow-claw.json  grow.json  grow_new.json  meta.json  quasi.json  quasi2.json  quasi3.json  quasi4.json  random.json  triangle.json
forbidden/: cluster.graph
forbidden/2p3/: 2p2.txt
forbidden/all/: c3.txt  diamond.txt  k4.txt
forbidden/k14_paw/: paw.txt
forbidden/splitcluster/: bowtie.txt  necktie.txt
forbidden/x172_triangle/: x172.txt
model/0.2/: triangle.k.json
model/0.4/: claw.k.json
model/0.6/: claw.k.json  cluster.k.json  triangle.k.json
model/0.8/: claw.k.json  cluster.k.json  split.k.json
model/1.0/: n_20.txt  n_40.txt  n_60.txt  n_70.txt  n_80.txt  n_90.txt
model/UCINetworkDataRepository/: cond-mat-2005.paj.txt  graph_info.json
model/albert_barabasi/: claw.k.json  cluster.k.json  cograph.k.json  p4.k.json  split.k.json  triangle.k.json
model/bio1/: 2k2_c4_c5.k.json  c4.k.json  claw.k.json  cograph.k.json  graph_info.json  k14_paw.k.json  p4.k.json  p4_c4.k.json  p5_c5.k.json  p5_triangle.k.json  paw.k.json  splitcluster.k.json  triangle.k.json  x172_triangle.k.json
model/bio2/: 2k2_c4_c5.k.json  c4.k.json  graph_info.json  k14_paw.k.json  p4_c4.k.json  p5_c5.k.json  p5_triangle.k.json  x172_triangle.k.json
model/cluster_very_small/: .directory  claw.k.json  graph_info.json  split.k.json  triangle.k.json
model/hand/: double_claw.txt
model/newman_watts_strogatz/: claw.k.json  cluster.k.json  cograph.k.json  split.k.json  triangle.k.json
model/random/: n_20_p_02.txt
other/mover/: README.md  mover.py
src/common/: boostgraph.cpp  boostgraph.h  common.cpp  common.h  gurobilp.cpp  gurobilp.h  randomize.cpp  randomize.h
src/graph/: boostgraph.cpp  boostgraph.h  commongraph.cpp  commongraph.h  ggraph.h  mergegraph.h  mgraph.cpp  mgraph.h  vgraph.cpp  vgraph.h
src/iso/: forbidden.cpp  forbidden.h  reducednodemapping.cpp  reducednodemapping.h  special_subgraph_isomorphism.h  vf.cpp  vf.h
src/state/: bstate.cpp  bstate.h  mstate.cpp  mstate.h  state.cpp  state.h
src/state/approx2k/: main_approx2k.cpp  state_approx2k.h
src/state/blp/: main_blp.cpp  state_blp.cpp  state_blp.h
src/state/bottom/: state_bottom.cpp  state_bottom.h
src/state/bottom_random/: state_bottom_random.cpp  state_bottom_random.h
src/state/extend/: main_extend.cpp  state_extend.cpp  state_extend.h
src/state/extend_boost/: main_extend_boost.cpp  state_extend.cpp  state_extend.h  state_extend_boost.cpp  state_extend_boost.h
src/state/grow_reduce/: state_grow_reduce.cpp  state_grow_reduce.h
src/state/grow_reduce2/: state_grow_reduce2.cpp  state_grow_reduce2.h
src/state/grow_reduce3/: state_grow_reduce3.cpp  state_grow_reduce3.h
src/state/grow_reduce_boost/: main_grow_reduce_boost.cpp  state_grow_reduce_boost.cpp  state_grow_reduce_boost.h
src/state/random/: main_random.cpp  state_random.cpp  state_random.h
src/state/random2/: main_random2.cpp  state_random2.cpp  state_random2.h
src/state/random_half/: main_random_half.cpp  state_random_half.cpp  state_random_half.h
src/state/simple_random/: main_simple_random.cpp  state_simple_random.cpp  state_simple_random.h
src/tools/: main_benchmark_iso.cpp  main_isomorph.cpp
tools/: allGraphs.py  barabasi_albert.py  binomial.py  duplication_divergence.py  graph_info.py  newman_watts_strogatz.py  normalize.rb  powerlaw.py  randomGraph.rb  randomGraphss.rb  tools.py
